5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1630_2924.log
== SUBMITION (2019-04-02 16:09:15) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input"tempo:")

r = a + b*(c*60)
print(r)
-- EXECUTION TIME:
0.169692
-- ERROR:
  File "/home/codebench/codes/1630/2924/main.py", line 3
    c = int(input"tempo:")
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:21) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input"tempo:")

r = a + b*(c*60)
print(r)
-- ERROR:
File "XXXX", line 3
    c = int(input"tempo:")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:23) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input"tempo:")

r = a + b*(c*60)
print(r)
-- ERROR:
File "XXXX", line 3
    c = int(input"tempo:")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:09:39) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input("tempo:"))

r = a + b*(c*60)
print(r)
-- EXECUTION TIME:
0.157365
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
180002.0
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
255061.0
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
183185.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:09:40) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input("tempo:"))

r = a + b*(c*60)
print(r)
-- EXECUTION TIME:
0.161162
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
180002.0
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
255061.0
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:41) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input("tempo:"))

r = a + b*(c*60)
print(r)
-- OUTPUT:
180002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:43) 
-- CODE:
a = float(input("posição:"))
b = float(input("velocidade:"))
c = int(input("tempo:"))

r = a + b*(c*60)
print(r)
-- OUTPUT:
180002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:10:35) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = int(input("c"))

r = a + b*(c*60)
print(r)
-- EXECUTION TIME:
0.141539
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
180002.0
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
255061.0
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
183185.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:36) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = int(input("c"))

r = a + b*(c*60)
print(r)
-- OUTPUT:
180002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:50) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = int(input("c"))


r = a + b*(c*60)
print(r)
-- OUTPUT:
180002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:11:02) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = int(input("c"))


r = a + b*c
print(r)
-- EXECUTION TIME:
0.112518
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002.0
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252.0
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
